# opengl-3d

./: .gitignore  CMakeLists.txt  README.md  glad.c  main.cpp  scene.json
Dependencies/include/glad/: glad.h
shaders/: fragmentShader.frag  phong.frag  phong.vert  vertexShader.vert
